Fix extra space around logo images

--- a/style.css
+++ b/style.css
@@ -294,6 +294,10 @@ div.logo {
     margin: 20px;
 }
 
+div.logo img {
+    vertical-align: top;
+}
+
 div.logo_container {
     overflow: auto;
 }
